--- a/lib/hello_web/templates/layout/root.html.heex
+++ b/lib/hello_web/templates/layout/root.html.heex
@@ -11,20 +11,21 @@
   </head>
   <body>
     <header>
-      <section class="container mx-auto p-6">
-        <nav class="">
-          <ul class="float-right text-blue-500 m-8">
+      <div class="grid grid-cols-3 grid-flow-col gap-4 place-items-center m-8">
+        <div class="col-span-2">
+          <a href="https://phoenixframework.org/">
+            <img src={Routes.static_path(@conn, "/images/phoenix.png")} alt="Phoenix Framework Logo"/>
+          </a>
+        </div>
+        <div class="col-span-1 pr-16">
+          <ul class="float-right text-blue-500 place-items-center">
             <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
             <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
               <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
             <% end %>
           </ul>
-        </nav>
-        <a href="https://phoenixframework.org/">
-          <img src={Routes.static_path(@conn, "/images/phoenix.png")} alt="Phoenix Framework Logo"/>
-        </a>
-      </section>
-      <br/>
+        </div>
+      </div>
       <hr/>
     </header>
     <%= @inner_content %>
