Add locale and hello messenger

--- a/lib/hello_web/templates/hello/index.html.heex
+++ b/lib/hello_web/templates/hello/index.html.heex
@@ -1,3 +1,5 @@
-<section class="phx-hero">
-  <h2>Hello World, from Phoenix!</h2>
-</section>
+<div class="grid grid-cols-1">
+  <div class="col-span-1 bg-gray-100 m-4 p-8 rounded text-center text-lg">
+    <h1 class="text-xl font-bold">Hello World, from Phoenix!</h1>
+  </div>
+</div>
